SONAR-19962 Upgrade Sonar Plugin API to v10.0.0.695